# swc-plugin-demo

./: Cargo.toml  package.json
src/: lib.rs
tests/: fixtrue.rs
tests/fixture/base/: output.js
